<resources>
    <string name="app_name">Asteroid Radar</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="asteroid_name_placeholder">Asteroid Name</string>
    <string name="asteroid_date_placeholder">Asteroid Date</string>
    <string name="asteroid_status">Asteroid Status</string>
    <string name="potentially_hazardous_image">Potentially Hazardous</string>
    <string name="closed_date">Date on Which Asteroid was Close to Earth</string>
    <string name="asteorid_magnitude">Magnitude of Asteroid</string>
    <string name="help_to_see_pop_up_about_magnitude">Help to see pop up about magnitude</string>
    <string name="asteroid_estimated_diameter">Estimated Diameter Of Asteroid</string>
    <string name="relative_velocity">Relative Velocity</string>
    <string name="loading">Loading</string>
    <string name="image_day">Image of the day</string>
    <string name="code_name">Asteroid Code Name</string>
</resources>
